# libTHC

./: grid.py  mp2.py  pyproject.toml  requirements.yaml  scf.py  thc.py
examples/: h2o.xyz  ls_thc_3c.py  ls_thc_4c.py
libTHC/: grid.py  ls_thc.py  scf.py  thc.py
